Added the ability to view users forms

--- a/views/login.html
+++ b/views/login.html
@@ -32,7 +32,7 @@
 
             $.ajax({
                 method: 'POST',
-                url: '/authenticate',
+                url: '/login/authenticate',
                 data: JSON.stringify(data),
                 contentType: 'application/json',
                 success: function(resp){
