minor styling to login page

--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,13 @@
 <html lang="en-US">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<head>
+	<title>ESOF423 Project</title>
+	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-
-	<head>
-		<title>ESOF423 Project</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
-
 	<h1 id="title1">Do It Yourself Legal Forms</h1>
 
 	<div id="titlebox">
@@ -24,44 +24,19 @@
 			and receive your completed legal document.
 		</p>
 		<p id="titlep">
-			Click on the form you need from the options below.
+			<input type="button" class="pure-button" value="Login" onclick="window.location='/login'"/>
 		</p>
 	</div>
 
-	<br />
-
-	<div class="formbox">
-		<div id="gridbox">
-			<p>Will</p>
-			<a name="form1495452749" id="formAnchor1495452749"></a>
-			<script type="text/javascript" src="https://fs29.formsite.com/include/form/embedManager.js?1495452749"></script>
-			<script type="text/javascript">
-				EmbedManager.embed({
-					key: "https://fs29.formsite.com/res/showFormEmbed?EParam=m%2FOmK8apOTDoQ7RIq970vmrYe2Y6sJfY&1495452749",
-					width: "100%", mobileResponsive: true				
-				});
-			</script>
-		</div>
-		<div id="gridbox">
-			<p> Lease </p>
-			<embed src="https://www.formsite.com">
-			<!--embed url for proper form once form is completed -->
-		</div>
-		<div id="gridbox">
-			<p> Misc. </p>
-			<embed src="https://www.formsite.com">
-			<!--embed url for proper form once form is completed -->
-		</div>
-	</div>
 
 	<p> Contact Information - TBD</p>
-	<p> The Github page for this project, along with a basic set of documentation on installing
-		this software and a page where you can report bugs, can be found at https://github.com/ESOF423/attorney-form-builder.</p>
-	
+	<p> The Github page for this project, along with a basic set of documentation on installing this software and a page where you
+		can report bugs, can be found at https://github.com/ESOF423/attorney-form-builder.</p>
+
 	<a href="https://drive.google.com/file/d/1Cgw1TXjO-6lhn1U3f11QyxkDn1wJxS-4/view?usp=sharing">View our latest burndown chart (updated biweekly)</a>
 
+	<p> Legal Information - TBD</p>
 </body>
 
 </html>
 
-<p> Legal Information - TBD</p>
