--- a/views/login.html
+++ b/views/login.html
@@ -53,7 +53,11 @@
                 success: function(resp){
                     if (resp.isAuthenticated){
                         $("#successText").html("Success")
-                        window.location = '/user'
+                        if (resp.isAttorney){
+                            window.location = '/attorney'
+                        } else {
+                            window.location = '/user'
+                        }
                     } else {
                         $("#errorText").html("Invalid email or password")
                     }
