fixed bug with nested questions

--- a/public/css/components/question.scss
+++ b/public/css/components/question.scss
@@ -1,18 +1,6 @@
-.df {
-    display: flex;
-}
-
-.flex-center {
-    justify-content: center;
-    align-items: center;
-}
-
-.tac {
-    text-align: center;
-}
-
-.ml1 {
-    margin-left: 1rem;
+.question-container {
+    border: solid 2px #000;
+    padding: .5rem;
 }
 
 .delete-button {
