--- a/public/css/stripe.css
+++ b/public/css/stripe.css
@@ -1,12 +1,13 @@
 .StripeElement {
     background-color: white;
-    height: 40px;
     padding: 10px 12px;
     border-radius: 4px;
     border: 1px solid transparent;
     box-shadow: 0 1px 3px 0 #e6ebf1;
     -webkit-transition: box-shadow 150ms ease;
     transition: box-shadow 150ms ease;
+
+    max-width: 20rem;
 }
 
 .StripeElement--focus {
