--- a/views/register.html
+++ b/views/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,13 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+
 <body>
     <form id="registerForm">
         <input type="text" placeholder="Email" id="email">
         <input type="password" placeholder="Password" id="password">
         <input type="password" placeholder="Retype Password" id="passwordRetype">
-        <input id="submitButton" type="submit" value="Submit" class="button">
+        <input id="submitButton" type="submit" value="Submit" class="user-submit-button">
         <div id="errorText" style="color: red"></div>
         <div id="successText" style="color: green"></div>
     </form>
@@ -21,43 +23,41 @@
     <form id="attorneyRegisterForm" style="display:none">
         <input type="text" placeholder="Full Name" id="fullName">
         <input type="text" placeholder="Business name" id="about">
-	<input type="submit" id="attorneySubmitButton" value="Submit" class="button1">
-    </form>  
+        <input type="submit" id="attorneySubmitButton" value="Submit" class="attorney-submit-button">
+    </form>
 
     <button type="button" onclick="document.getElementById('attorneyRegisterForm').style.display='block';document.getElementById('submitButton').style.display='none'">Click here to register as an attorney</button>
 
 
     <script>
-        $(".button1").click(function(e) {
-	    e.preventDefault()
-	    var data = {
-	        email: $("#email").val(),
+        $(".attorney-submit-button").click(function (e) {
+            e.preventDefault()
+            var data = {
+                email: $("#email").val(),
                 password: $("#password").val(),
                 passwordRetype: $("#passwordRetype").val(),
-	        name: $("#fullName").val(),
-	        businessName: $("#about").val()
-	    }
+                name: $("#fullName").val(),
+                about: $("#about").val()
+            }
 
-	$.ajax({
-	    method: 'POST',
-	    url: '/createAttorney',
-	    data: JSON.stringify(data),
-	    contentType: 'application/json',
-	    success: function(resp){
+            $.ajax({
+                method: 'POST',
+                url: '/register/createAttorney',
+                data: JSON.stringify(data),
+                contentType: 'application/json',
+                success: function (resp) {
                     $("#successText").html("Success")
                 },
-                error: function(e){
+                error: function (e) {
                     $("#errorText").html(e.responseJSON.message)
                 }
             })
         })
-    </script>
-  
-    <script>
-        $(".button").click(function(e) {
+
+        $(".user-submit-button").click(function (e) {
             e.preventDefault()
-            
-            var data =  {
+
+            var data = {
                 email: $("#email").val(),
                 password: $("#password").val(),
                 passwordRetype: $("#passwordRetype").val()
@@ -65,17 +65,18 @@
 
             $.ajax({
                 method: 'POST',
-                url: '/createUser',
+                url: '/register/createUser',
                 data: JSON.stringify(data),
                 contentType: 'application/json',
-                success: function(resp){
+                success: function (resp) {
                     $("#successText").html("Success")
                 },
-                error: function(e){
+                error: function (e) {
                     $("#errorText").html(e.responseJSON.message)
                 }
             })
         })
     </script>
 </body>
+
 </html>
