styled register page

--- a/views/register.html
+++ b/views/register.html
@@ -7,26 +7,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+        crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <style>
+        .register-wrapper {
+            max-width: 200px;
+            margin: 40px auto;
+        }
+
+        .mt2 {
+            margin-top: 10px;
+        }
+
+        .tac {
+            text-align: center;
+        }
+    </style>
+
 </head>
 
 <body>
-    <form id="registerForm">
-        <input type="text" placeholder="Email" id="email">
-        <input type="password" placeholder="Password" id="password">
-        <input type="password" placeholder="Retype Password" id="passwordRetype">
-        <input id="submitButton" type="submit" value="Submit" class="user-submit-button">
-        <div id="errorText" style="color: red"></div>
-        <div id="successText" style="color: green"></div>
-    </form>
+    <div class="register-wrapper">
+        <form id="registerForm" class="pure-form">
+            <h1>Register</h1>
+            <input type="text" placeholder="Email" id="email">
+            <input type="password" placeholder="Password" id="password" class="mt2">
+            <input type="password" placeholder="Retype Password" id="passwordRetype" class="mt2">
 
-    <form id="attorneyRegisterForm" style="display:none">
-        <input type="text" placeholder="Full Name" id="fullName">
-        <input type="text" placeholder="Business name" id="about">
-        <input type="submit" id="attorneySubmitButton" value="Submit" class="attorney-submit-button">
-    </form>
+            <div id="registerAsAttorneyWrapper">
+                Click
+                <a href="#" id="registerAsAttorney">here</a> to register as an attorney
+            </div>
 
-    <button type="button" onclick="document.getElementById('attorneyRegisterForm').style.display='block';document.getElementById('submitButton').style.display='none'">Click here to register as an attorney</button>
+
+            <input id="submitButton" type="submit" value="Submit" class="user-submit-button pure-button mt2 pure-button-primary">
+            <div id="errorText" style="color: red"></div>
+            <div id="successText" style="color: green"></div>
+        </form>
+
+        <form id="attorneyRegisterForm" style="display:none" class="pure-form">
+            <input type="text" placeholder="Full Name" id="fullName" class="mt2">
+            <input type="text" placeholder="Business name" id="about" class="mt2">
+            <input type="submit" id="attorneySubmitButton" value="Submit" class="attorney-submit-button pure-button pure-button-primary mt2">
+        </form>
+    </div>
 
 
     <script>
@@ -75,6 +101,14 @@
                     $("#errorText").html(e.responseJSON.message)
                 }
             })
+        })
+
+        $("#registerAsAttorney").click(function () {
+            $("#attorneyRegisterForm").show()
+            $("#submitButton").hide()
+            $("#registerAsAttorneyWrapper").hide()
+            // document.getElementById('attorneyRegisterForm').style.display='block';
+            // document.getElementById('submitButton').style.display='none'
         })
     </script>
 </body>
