--- a/views/index.html
+++ b/views/index.html
@@ -1,47 +1,163 @@
-<!--
-  - MSU ESOF423
-  - Spring 2018
-  - Group 3
--->
-
 <!DOCTYPE html>
-<html lang="en-US">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html>
+<title>Attorney Form Builder</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+    body, html {
+        height: 100%;
+        color: #777;
+        line-height: 1.8;
+    }
 
-<head>
-        <title>ESOF423 Project</title>
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-</head>
+    /* Create a Parallax Effect */
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 
+    /* First image (Logo. Full height) */
+    .bgimg-1 {
+        background-image: url('img/background.jpg');
+        min-height: 100%;
+    }
+
+    /* Second image (Portfolio) */
+    .bgimg-2 {
+        background-image: url("img/glacier.jpg");
+        min-height: 600px;
+    }
+
+    /* Third image (Contact) */
+    .bgimg-3 {
+        background-image: url("img/clouds.jpg");
+        min-height: 600px;
+    }
+
+    .w3-wide {letter-spacing: 10px;}
+    .w3-hover-opacity {cursor: pointer;}
+
+    /* Turn off parallax scrolling for tablets and phones */
+    @media only screen and (max-device-width: 1024px) {
+        .bgimg-1, .bgimg-2, .bgimg-3 {
+            background-attachment: scroll;
+        }
+    }
+</style>
 <body>
-        <h1 id="title1">Do It Yourself Legal Forms</h1>
 
-        <div id="titlebox">
-                <p id="titlep">
-                        Why pay an attorney to enter your information into a standard legal form? Instead, enter the information yourself and save
-                        money. Our legal forms are created by attorneys in your state. Just fill in the required information, pay for the form
-                        and receive your completed legal document.
-                </p>
-                <p id="titlep">
-                        <input type="button" class="pure-button" value="Login" onclick="window.location='/login'"/>
-                </p>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+    <div class="w3-bar" id="myNavbar">
+        <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+            <i class="fa fa-bars"></i>
+        </a>
+        <a href="#home" class="w3-bar-item w3-button">HOME</a>
+        <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
+        <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PROJECT DETAILS</a>
+        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+            <i class="fa fa-search"></i>
+        </a>
+    </div>
+
+    <!-- Navbar on small screens -->
+    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+        <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
+        <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
+        <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+        <a href="#" class="w3-bar-item w3-button">SEARCH</a>
+    </div>
+</div>
+
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-middle" style="white-space:nowrap;">
+        <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">ATTORNEY <span class="w3-hide-small">FORM</span> BUILDER</span>
+    </div>
+</div>
+
+<!-- Container (About Section) -->
+<div class="w3-content w3-container w3-padding-64" id="about">
+    <h3 class="w3-center">ABOUT</h3>
+    <p class="w3-center"><em>Custom legal form creation services</em></p>
+    <p>Attorney Form Builder allows lawyers and attorneys to create custom legal forms, such as wills, that customers can then fill out and purchase for on-demand legal document creation,
+    without any waiting periods or the need to schedule an appointment. This is a fast process that saves both attorneys and their clients a lot of time. Legal documents, welcome to the digital age.</p>
+    <div class="w3-center"><input type="button" class="pure-button" value="Login here" onclick="window.location='/login'"/></div>
+</div>
+
+<div class="w3-row w3-center w3-dark-grey w3-padding-16">
+</div>
+
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+        <span class="w3-xxlarge w3-text-white w3-wide">Background</span>
+    </div>
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div class="w3-content w3-container w3-padding-64" id="portfolio">
+    <h3 class="w3-center">Project Details</h3>
+    <p class="w3-center"><p>This web application was made for ESOF 423 at Montana State University. What follows are some details and links relevant to this class.</p></p><br>
+
+    <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+    <div class="w3-row-padding w3-center">
+        <div class="w3-col m3">
+            <a href="https://github.com/ESOF423/attorney-form-builder">View this project on Github</a>
         </div>
 
+        <div class="w3-col m3">
+            <a href="https://github.com/ESOF423/attorney-form-builder/wiki/Development-Documentation">View our developer documentation here!</a>
+        </div>
 
-        <p> Contact Information - TBD</p>
+        <div class="w3-col m3">
+            <a href="https://github.com/ESOF423/attorney-form-builder/wiki/User-Documentation">View our user documentation here!</a>
+        </div>
 
-        <a href="https://github.com/ESOF423/attorney-form-builder">View this project on Github</a>
-        <br>
-        <a href="https://github.com/ESOF423/attorney-form-builder/wiki/Development-Documentation">View our developer documentation here!</a>
-        <br>
-        <a href="https://github.com/ESOF423/attorney-form-builder/wiki/User-Documentation">View our user documentation here!</a>
-        <br>
-        <a href="https://github.com/ESOF423/attorney-form-builder/issues">Submit bug reports here</a>
-        <br><br>
-        <a href="https://drive.google.com/file/d/1Cgw1TXjO-6lhn1U3f11QyxkDn1wJxS-4/view?usp=sharing">View our latest burndown chart (updated biweekly)</a>
+        <div class="w3-col m3">
+            <a href="https://github.com/ESOF423/attorney-form-builder/issues">Submit bug reports here</a>
+        </div>
+    </div>
 
-        <p> Legal Information - TBD</p>
+    <div class="w3-row-padding w3-center w3-section">
+        <div class="w3-col m3">
+            <a href="https://drive.google.com/file/d/1Cgw1TXjO-6lhn1U3f11QyxkDn1wJxS-4/view?usp=sharing">View our latest burndown chart (updated biweekly)</a>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+    <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+    <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+        <img id="img01" class="w3-image">
+        <p id="caption" class="w3-opacity w3-large"></p>
+    </div>
+</div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+        <span class="w3-xxlarge w3-text-white w3-wide">Thanks for stopping by!</span>
+    </div>
+</div>
+
+<!-- Container (Contact Section) -->
+
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-18 w3-opacity w3-hover-opacity-off">
+    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Back up</a>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+
+
 </body>
-
 </html>
