--- a/views/index.html
+++ b/views/index.html
@@ -24,19 +24,19 @@
 
     /* First image (Logo. Full height) */
     .bgimg-1 {
-        background-image: url('img/background.jpg');
+        background-image: url("https://github.com/ESOF423/attorney-form-builder/blob/Development/views/img/background.jpg?raw=true");
         min-height: 100%;
     }
 
     /* Second image (Portfolio) */
     .bgimg-2 {
-        background-image: url("img/glacier.jpg");
+        background-image: url("https://github.com/ESOF423/attorney-form-builder/blob/Development/views/img/glacier.jpg?raw=true");
         min-height: 600px;
     }
 
     /* Third image (Contact) */
     .bgimg-3 {
-        background-image: url("img/clouds.jpg");
+        background-image: url("https://github.com/ESOF423/attorney-form-builder/blob/Development/views/img/clouds.jpg?raw=true");
         min-height: 600px;
     }
 
