--- a/views/index.html
+++ b/views/index.html
@@ -150,6 +150,19 @@
 
 <!-- Container (Contact Section) -->
 
+<script>
+// Turns out this was important
+window.onscroll = function() {myFunction()};
+function myFunction() {
+var navbar = document.getElementById("myNavbar");
+if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
+} else {
+navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
+}
+}
+</script>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-18 w3-opacity w3-hover-opacity-off">
